Fix overlapping text on small screens

--- a/style.css
+++ b/style.css
@@ -11,11 +11,10 @@ div.main{
 }
 
 section.title{
-	height: 70px;
+	min-height: 70px;
 	padding-top: 3px;
 	padding-bottom: 2px;
 	font-size: 18px;
-	line-height: 0px;
 }
 
 section.title h1{text-decoration: underline;}
@@ -23,9 +22,14 @@ section.title h1{text-decoration: underline;}
 section.content{
 	padding-top: 10px;
 	padding-bottom: 10px;
-	height: auto;
 }
 
-section p{
+p, h1, li{
+	line-height: 1.25;
 	margin: 0px;
+}
+
+ul{
+	margin: 0px;
+	padding-left: 15px;
 }
